2009-11-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/CMakeLists.txt: start recording flags and options in
	header files, rather than just in YARPConfig.cmake.  This 
	makes those options easier to access without using cmake.
	Header files are created as yarp/conf/(version|options|system).h 
	initially in the include subdirectory of the binary directory.

2009-11-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PropertyTest.cpp: add regression test
	for windows paths in environment variables.

	* src/libYARP_OS/src/Property.cpp: make exception for treatment
	of "\" characters in environment variables, to allow windows
	paths to work (thanks David Vernon!)

2009-11-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/CMakeLists.txt: remove YARP1 compatibility libraries
	as a build option.

	* example/swig/yarp.i: apply C# support patch from Stephane
	Lallee (thanks Stephane!).  Also added better translation of
	the reply method.
	

2009-11-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: start enforcing some RPC
	contraints.  These only apply to users of the 
	RpcServer/RpcClient classes.

	* src/libYARP_OS/include/yarp/os/RpcServer.h: add a stub for 
	an RPC client specialization of Ports.  This adds no new 
	behavior, except to let the user declare that a port should
	only be used as an RPC client.  This will let YARP give better
	warnings/errors.

	* src/libYARP_OS/include/yarp/os/RpcClient.h: add a stub for 
	an RPC client specialization of Ports.  This adds no new 
	behavior, except to let the user declare that a port should
	only be used as an RPC client.  This will let YARP give better
	warnings/errors.

	* src/libYARP_OS/include/yarp/os/Port.h: add flags for tagging
	ports as input, output, and rpc based.

	* src/libYARP_OS/include/yarp/os/Property.h: make hash size
	of property objects configurable.

2009-10-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
