@@ -1,5 +1,13 @@
 SET(NEED_LIBS YARP_OS YARP_sig)
-LINK_LIBRARIES(optimized ${GSL_LIBRARIES} debug ${GSL_LIBRARIES})
+
+SET(USE_ATLAS FALSE CACHE BOOL "Select true to link to Atlas for BLAS")
+IF(USE_ATLAS)
+   FIND_PACKAGE(Atlas)
+   LINK_LIBRARIES(${ATLAS_CBLAS_LIBRARY} ${ATLAS_ATLAS_LIBRARY} ${GSL_LIBRARY})
+ELSE(USE_ATLAS)
+   LINK_LIBRARIES(optimized ${GSL_LIBRARIES} debug ${GSL_LIBRARIES})
+ENDIF(USE_ATLAS)
+
 YarpLibrary(YARP_math math)
 
 INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
